Add message parser

--- a/src/test/test.html
+++ b/src/test/test.html
@@ -16,6 +16,7 @@
     <script src="../MessageBuilder/test.js"></script>
     <script src="../crypto/test.js"></script>
     <script src="../AuthKeyExchange/test.js"></script>
+    <script src="../MessageParser/test.js"></script>
     <!-- load code you want to test here -->
 
     <!-- load your test files here -->
