--- a/src/test/test.html
+++ b/src/test/test.html
@@ -8,8 +8,7 @@
     <div id="mocha"></div>
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script src="../../node_modules/chai/chai.js"></script>
-    <!-- <script>mocha.setup({ ui: 'bdd', reporter: 'spec' })</script> -->
-    <script>mocha.setup({ ui: 'bdd' })</script>
+    <script>mocha.setup({ ui: 'bdd', reporter: 'spec' })</script>
 
     <script src="../utils/test.js"></script>
     <script src="../MTProtoTransport/test.js"></script>
